--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 	</div>
 
-	<div class="text-center"><a class="btn btn-inverse" ng-click="switchDbg()">I can show you unimaginable things</a></div>
+	<div class="text-center"><a class="btn btn-inverse" ng-click="switchDbg()">CLICK MEH! I can show you unimaginable things</a></div>
 
 	<div ng-include="'imaPartial.html'"></div>
 
